# myprojects

./: README.md  gitignore  requirements.txt  script.js
aiagentproject/: main.py  pyproject.toml
airesumereviewer/: main.py
bestie.app/backend/: app.py  models.py  routes.py
calculator.python/: main.py
calendar.python/: main.py
docs/: index.html
fullstackbestieapp.python/backend/: app.py
interest-rate-calculator/: main.py
pythonpractice/: Pproject(countdowntimer).py  Pproject(weightcoverter).py  Pproject1(areacalc).py  Pproject13.0(rockpaperscissors).py  Pproject2(madlibs).py  Pproject3(shoppingcart).py  Pproject4(Calculator).py  Pproject5(emailslicer).py  Pproject7(shoppingcart).py  practice10(formatspecifiers).py  practice11(whileloops).py  practice12(forloop).py  practice13(nestedloop).py  practice8(stringmethods).py  practice9(stringindexing).py
pythonpractice/learning/: practice1(variables).py  practice1.2(userinput).py  practice1.4(ifstatements).py  practice1.5(logicaloperators).py  practice1.7(stringmethods).py  practice16(dictionaries).py  practice18(functions).py  practice19(defaultarguments).py  practice2(typecasting).py  practice2.4(lists,sets,tuples).py  practice2.5(2dlists).py  practice2.7(random#generation).py  practice21(args&kwargs).py  practice22(iterables).py  practice23(modules).py  practice25(ifname=main).py  practice26(objectoriented).py  practice27(classvariables).py  practice28(inheritance).py  practice3.0(keywordarguements).py  (+37 more)
slot-machine/: script.js
storeproject/: .env  package-lock.json  package.json
weather.app/: main.py
(+27 files in other folders)
