[project]
name = "aiagentproject"
version = "0.1.0"
description = "This is a practice project I made where I build an AI agent that looks up the weather by connecting to openweather api and openai api"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
